<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/img"
        android:layout_weight="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_cost_button"
        android:contentDescription="@string/main_home_logo_contentDescription_text">
    </ImageView>

    <Button
        android:id="@+id/home_cost_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#3F51B5"
        android:padding="10dp"
        android:text="@string/cost_accounting_text"
        app:layout_constraintBottom_toTopOf="@id/home_financial_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_icon">
    </Button>

    <Button
        android:id="@+id/home_financial_icon"
        android:text="@string/financial_accounting_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:padding="10dp"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_cost_button">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>